--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,47 +1,65 @@
 *{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
-    font-family: 'Noto Sans TC';
-    font-style: normal;
+    box-sizing:border-box;          //reset
+    margin:0;                       //reset
+    padding:0;                      //reset
+    font-family: 'Noto Sans TC';    //網頁字體
+    font-style: normal;             //網頁字體
 }
 
 
-@mixin mobile{
-    @media(max-width:360px){
+
+@mixin bigmobile{
+    @media(max-width:1250px){
       @content;
     }
 }
 
+@mixin midmobile{
+    @media(max-width:1000px){
+      @content;
+    }
+}
 
+@mixin mobile{
+    @media(max-width:600px){
+      @content;
+    }
+}
 
 nav{
-    
-    // background-color: blue;
     width:100%;
     height:54px;
-    display:flex;    
-    align-items: center;/* 垂直置中 */
-    justify-content: center;/* 水平置中 */
-    position: fixed;
+    display:flex;               //固定在視窗同個位置，捲動時跟著移動
+    position: absolute;
     z-index: 2;
     background-color: white;
-    @include mobile{
-        width:360px;
-    }
+    
+    
     
     div{
         display:flex;
         width:1200px;
+        // width:75%;
+        justify-content: space-between; //水平分散
+        margin: auto;                   //auto就是置中
+        // position: absolute;
+        // z-index: 2;
         // background-color: yellow;
+        
+        @include bigmobile{
+            width:80%;
+        }
+        @include midmobile{
+            width:80%;
+        }
         @include mobile{
-            width:360px;
+            width:80%;
         }
 
-        .nav-bar-left{           
+        div.nav-bar-left{
+            width:50%;           
             p{
                 width:100%;
-                // background-color: green;
                 margin-top: 10px;
                 margin-bottom: 10px;
                 font-size: 30px;
@@ -49,10 +67,12 @@ nav{
                 color:#448899; 
                 @include mobile{
                     margin:10px;
+                    font-size: 20px;
                 }
             }
         }
-        .nav-bar-right{
+        div.nav-bar-right{
+            width:50%;
             display:flex;
             justify-content: right;
             
@@ -68,8 +88,9 @@ nav{
                 color:#666666;
                 font-weight:500;
                 @include mobile{
-                    margin-right:10px;
-                    margin-left:10px;
+                    margin-right:5px;
+                    margin-left:5px;
+                    font-size: 12px;
                 }
                 
             }
@@ -83,10 +104,11 @@ main{
     .page-one{
         width: 100%;
         height: 320px;
-        position: relative;
+        // position: relative;
         background-image: url(../img/welcome.png);
         background-repeat: no-repeat;
         background-size: cover;
+        
             
         .text{
             position: absolute;
@@ -94,11 +116,13 @@ main{
             margin-top: 85px;
             left:50%;
             transform:translate(-50%,0%);
-            width: 1200px;
             @include mobile{
-              width: 100%;
-              padding: 20px; 
+                width: 100%;
+                padding: 20px; 
             } 
+            @include bigmobile{
+                width:80%;
+            }
             
         h2{
             font-weight: 700;
@@ -106,6 +130,10 @@ main{
             line-height: 24px;
             color: #F8F8F8;
             margin: 30px 0;
+            @include mobile{
+                font-size: 20px;
+                // margin: 20px 0;
+            }
         }
         p{
             font-weight: 700;
@@ -113,7 +141,9 @@ main{
             line-height: 13px; 
             color: #F8F8F8;
             margin: 30px 0;
-           
+            @include mobile{
+                font-size: 12px;
+            }
             
         }
         .but{
@@ -134,7 +164,8 @@ main{
                 border: none;
                 border-radius: 6px 0 0 6px;
                 @include mobile{
-                width: 230px;
+                    width: 200px;
+                    
                 }
             }
             .icon{
@@ -143,7 +174,9 @@ main{
                 background: #448899;
                 border: none;
                 border-radius:  0 10% 10% 0 ;
-                
+                display:flex;    
+                align-items: center;/* 垂直置中 */
+                justify-content: center;/* 水平置中 */
                 i{
 
                     color: #F8F8F8;
@@ -152,209 +185,73 @@ main{
                 }
             }   
         }
-        } 
-
-        .searchForm{
+        //新增一個外層
+        .searchcontainer{
             width: 400px;
-            height: 162px;
-            display: grid;
-            grid-template-columns: repeat(3,120px);
-            grid-template-rows: repeat(4 ,40px);
-            padding-right:40px;
-            margin-top: 5px;
-            border-radius:  5px;
-            box-shadow: 0px 0px 20px #AABBCC;
-            background-color:  #FFFFFF;
-            // display: none;
-            @include mobile{ 
-                width: 322px;
-                height: 100%;
-                grid-template-columns: repeat(3,120px);
-                grid-template-rows: repeat(4 ,40px);
-                padding-right: 34px;     
-            } 
-            .searchItem{
-                width: 120px;
-                height: 40px;
-                padding: 10px 15px;
-                gap: 4px;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 20px;
-                align-items: center;
-                @include mobile{ 
-                    width: 96px;
-                    height: 100%;     
-                } 
-            }
-
-            .searchItem:hover{
+            // height: 162px;
+            display:none;
+            // position:absolute;
+            // z-index: 100;
+            .searchForm{
                 width: 100%;
                 height: 100%;
-                background-color: rgba(232, 232, 232, 1);
-                border-radius: 5px;
-            }
-        }
-        }
-    // .firstsection{
-    //     width:100%;
-    //     .blocktop{
-    //         width:100%;
-    //         height:320px;
-    //         background-image: url("../img/welcome.png");
-    //         // background-size: contain;
-    //         background-size: cover;
-    //         background-repeat: no-repeat;
-    //         position:relative;
+                // z-index: 50;
+                display: grid;
+                grid-template-columns: repeat(3,120px);
+                grid-template-rows: repeat(3 ,40px);
+                padding-right:40px;
+                margin-top: 5px;
+                border-radius:  5px;
+                box-shadow: 0px 0px 20px #AABBCC;
+                background-color:  #FFFFFF;
+                // display: none;
+                @include mobile{ 
+                    width: 322px;
+                    height: 100%;
+                    padding-right: 34px;     
+                } 
+                // @include bigmobile{ 
+                //     width: 800px;
+                //     height: 100%;
+                //     grid-template-columns: repeat(3,1fr);
+                //     grid-template-rows: repeat(4 ,1fr);
+                //     padding-right: 34px;     
+                // } 
 
-    //         @include mobile{
-    //             width:360px;
-    //         }
-
-    //         div{
-    //             // background-color: red;
-    //             width:1200px;
-    //             position:absolute;
-    //             transform:translate(-50%,0%); //相對於父層左邊-50 上面0
-    //             left:50%;
-    //             // transform:translate(25%,0%);
-    //             margin-top: 85px;
-    //             @include mobile{
-    //                 width:360px;
-    //                 margin-top:86px;
-    //             }
                 
-    //             .enjoy{
-    //                 height:30px;
-    //                 color:white;
-    //                 font-size: 28px;
-    //                 font-weight:bold;
-    //                 // background-color: rgb(151, 153, 152);
-    //                 display:flex;
-    //                 align-items: center;/* 垂直置中 */
-    //                 @include mobile{
-    //                     margin-left:20px;
+                .searchItem{
+                    width: 120px;
+                    height: 40px;
+                    padding: 10px 15px;
+                    gap: 4px;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 20px;
+                    align-items: center;
+                    @include mobile{ 
+                        width: 96px;
+                        height: 100%;     
+                    } 
+                }
 
-    //                 }
-    //             }
-    //             .explore{
-    //                 margin-top: 15px;
-    //                 height:30px;
-    //                 color:white;
-    //                 font-size: 16px;
-    //                 // background-color: cadetblue;
-    //                 display:flex;
-    //                 align-items: center;/* 垂直置中 */
-    //                 @include mobile{
-    //                     margin-left:20px;
-    //                 }
-    //             }
-    //             .search-form{
-    //                 margin-top: 25px;
-    //                 width:460px;
-    //                 height: 46px;
-    //                 display:flex;
-    //                 position:relative;
-    //                 @include mobile{
-    //                     width:360px;
-    //                 }
-                    
-                    
-    //                 .search-input{
-    //                     height: 46px;
-    //                     width:400px;
-    //                     // display:flex;
-    //                     align-items: center;/* 垂直置中 */
-    //                     padding-left: 15px;//內部靠左15px
-    //                     border: none;
-    //                     border-radius: 8px 0 0 8px;
-    //                     font-weight: 700;
-    //                     color:#757575;
-    //                     @include mobile{
-    //                         margin-left:20px;
-    //                         width:230px;
-    //                     }
-    //                 }
-    //                 .search-button{
-    //                     height: 46px;
-    //                     width:60px;
-    //                     border: none;
-    //                     background-color: #448899;
-    //                     border-radius: 0 8px 8px 0;
-    //                         i{
-    //                             // width:30px;
-    //                             // height:30px;
-    //                             font-size: 1.5rem;
-    //                             color:white;    
-    //                         }
-    //                 }
-    //             }
-    //         }
-    //         .search-item{
-    //             // position: absolute;
-    //             // top:229px;
-    //             // left:350px;
-    //             width: 400px;
-    //             height: 162px;
-    //             display: grid;
-    //             grid-template-columns: repeat(3,120px);
-    //             grid-template-rows: repeat(4 ,40px);
-    //             padding-right:40px;
-    //             margin-top: 5px;
-    //             border-radius:  5px;
-    //             box-shadow: 0px 0px 20px #AABBCC;
-    //             background-color:  #d7a6a6;
-    //             // display: none;
-    //             @include mobile{ 
-    //                 width: 322px;
-    //                 height: 100%;
-    //                 grid-template-columns: repeat(3,120px);
-    //                 grid-template-rows: repeat(4 ,40px);
-    //                 padding-right: 34px;     
-    //             }
-    //         }
-    //         .item-contactions{
-    //             width: 120px;
-    //             height: 40px;
-    //             padding: 10px 15px;
-    //             gap: 4px;
-    //             font-weight: 500;
-    //             font-size: 14px;
-    //             line-height: 20px;
-    //             align-items: center;
-    //             @include mobile{ 
-    //                 width: 96px;
-    //                 height: 100%;     
-    //             } 
-    //         } 
-    //             // .search-item{
-    //             //     width:400px;
-    //             //     height:126px;
-    //             //     // background-color: #FFFFFF;
-    //             //     // background-color: gray;
-    //             //     outline:1px solid rgb(200, 200, 200);//不佔空間的border
-    //             //     margin-top:5px;
-    //             //     display:grid;
-    //             //     grid-template-columns: repeat(3,1fr); //寬度
-    //             //     grid-template-rows: repeat(4,1fr);   //*高度
-    //             //     grid-gap:5px;
-    //             //     z-index: 5;
-    //             //     .item-contactions{
-    //             //         width:120px;
-    //             //         height: 40px;
-    //             //         background-color: yellow;
-    //             //         outline:1px solid rgb(200, 200, 200);//不佔空間的border
-                        
-                        
+                .searchItem:hover{
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(232, 232, 232, 1);
+                    border-radius: 5px;
+                }
+            }
+        }   
 
-    //             //     }
-    //             // }
-            
-    //     }
+
+        } 
         
-    // }
+    }
+
     .container-twelve{
-        width:100%;
+        // width:100%;
+        // height:100vh;
+        // position:absolute;
         .container-block{
             width:1200px;
             margin:55px auto; //外部上下55px 左右置中 
@@ -363,10 +260,26 @@ main{
             grid-template-rows: repeat(3,242px);    /*高度 1row 2row*/
             grid-gap:30px;
 
+
+
+            @include bigmobile{
+                width:80%;
+                grid-template-columns: repeat(3,1fr); //寬度
+                grid-template-rows: repeat(4,1fr);    /*高度 1row 2row*/
+            }
+            
+            @include midmobile{
+                width:80%;
+                grid-template-columns: repeat(2,1fr); //寬度
+                grid-template-rows: repeat(6,1fr);    /*高度 1row 2row*/
+            }
+            
             @include mobile{
                 width:90%;
                 grid-template-columns: repeat(1,322px); //寬度
                 grid-template-rows: repeat(12,280px);    /*高度 1row 2row*/
+                justify-content: center;/* 水平置中 */
+
                 // padding:20 0px;
             }
             
@@ -376,35 +289,23 @@ main{
                 outline:1px solid rgb(200, 200, 200);//不佔空間的border
                 border-radius: 8px;
                 .img-block{
-                    // width:100%;
-                    // height:197px;
-                    // // background-image: url("../img/IMG_3463.jpg");
-                    // background-color: #448899;
-                    // background-size: cover;
-                    // background-repeat: no-repeat;
-                    // display:flex;
-                    // align-items: end;/* 垂直置中 */
-                    position: relative;
                     width: 100%;
                     height: 197px;
                     display: flex; 
+                    object-position: center center;
+                    object-fit:cover;   /*裁切縮放*/
+                    // object-fit: fill;
+                    // flex-wrap: wrap;
                     // display: block;   
                     align-items: center;
                     position: relative;
+                    z-index: -50;
                     border-right-color: #448899;
                     @include mobile{
                         width:321px;
                         height:235px;
                     }
                     p{
-                        // width: 100%;
-                        // height:40px;
-                        // padding: 10px;
-                        // font-size: 16px;
-                        // font-weight: bolder;
-                        // background-color: black;
-                        // opacity: 0.6;
-                        // color:white;
                         width: 100%;
                         height: 40px;
                         position:absolute;
@@ -417,6 +318,9 @@ main{
                         
                         font-size: 16px;
 
+                        @include bigmobile{
+                            font-size: 13px;
+                        }
                         @include mobile{
                             width:322px;
                         }
@@ -427,11 +331,6 @@ main{
                     width:100%;
                     display: flex;
                     justify-content: space-between;/*內文區塊水平平分*/
-                    // width: 100%;
-                    // height: 40px;
-                    // display: flex;
-                    // justify-content: space-between;
-                    // align-items: center; 
                     
                     p{
                         padding:10px;
@@ -470,42 +369,42 @@ footer{
 }
 
 .loading {
-	opacity: 0;
-	display: flex;
-	position: fixed;
-	bottom: 100px;
-	left: 50%;
-	transform: translateX(-50%);
-	transition: opacity .3s ease-in;
+    opacity: 0;
+    display: flex;
+    position: fixed;
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: opacity .3s ease-in;
 }
 
 .show {
-	opacity: 1;
+    opacity: 1;
 }
 
 .ball {
-	background-color: #777;
-	border-radius: 50%;
-	margin: 5px;
-	height: 10px;
-	width: 10px;
-	animation: jump .5s ease-in infinite;
+    background-color: #777;
+    border-radius: 50%;
+    margin: 5px;
+    height: 10px;
+    width: 10px;
+    animation: jump .5s ease-in infinite;
 }
 
 .ball:nth-of-type(2) {
-	animation-delay: 0.1s;
+    animation-delay: 0.1s;
 }
 
 .ball:nth-of-type(3) {
-	animation-delay: 0.2s;
+    animation-delay: 0.2s;
 }
 
 @keyframes jump {
-	0%, 100% {
-		transform: translateY(0);
-	}
-	
-	50% {
-		transform: translateY(-10px);
-	}
+    0%, 100% {
+        transform: translateY(0);
+    }
+    
+    50% {
+        transform: translateY(-10px);
+    }
 }
