--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
-<body>
+<body id="body">
+
     <nav>
         <div>
             <div class="nav-bar-left">
@@ -31,64 +32,45 @@
                 <p>探索每個角落，體驗程式的深度旅遊行程</p>
                 <form action="" method="" class="but">
                     <input type="text" name="" class="search" value="輸入景點名稱查詢" />
-                    <button type="" class="icon">
+                    <div type="" class="icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
+                    </div>
                 </form>
-            <div>
+            
                 <!-- 建立搜尋表單 -->
-            <div class="searchForm">
-                    <div class="searchItem">公共藝術</div>
-                    <div class="searchItem">其 他</div>
-                    <div class="searchItem">單車遊蹤</div>
-
-                    <div class="searchItem">宗教信仰</div>
-                    <div class="searchItem">戶外踏青</div>
-                    <div class="searchItem">春季活動</div>
-
-                    <div class="searchItem">歷史建築</div>
-                    <div class="searchItem">藍色公路</div>
-                    <div class="searchItem">藝文館所</div>
-
-                    <div class="searchItem">親子共遊</div>
-                    <div class="searchItem">養生溫泉</div>
-                <!-- </div> -->
+                <div class="searchcontainer">
+                    <div class="searchForm">
+                            <!-- <div class="searchItem publicart">公共藝術</div>
+                            <div class="searchItem else">其 他</div>
+                            <div class="searchItem bike">單車遊蹤</div>
+    
+                            <div class="searchItem religion">宗教信仰</div>
+                            <div class="searchItem outdoor">戶外踏青</div>
+                            <div class="searchItem spring">春季活動</div>
+    
+                            <div class="searchItem history">歷史建築</div>
+                            <div class="searchItem blue">藍色公路</div>
+                            <div class="searchItem art">藝文館所</div>
+    
+                            <div class="searchItem parentchild">親子共遊</div>
+                            <div class="searchItem spa">養生溫泉</div> -->
+                        <!-- </div> -->
+                    </div>
+                </div>
+                
+            
             </div>
+
         </section>
 
-        <!-- <section class="firstsection">
-            <div class="blocktop">
-                <div>
-                    <p class="enjoy">輕鬆享受台北一日悠閒</p>
-                    <p class="explore">探索每個角落，體驗城市的深度旅遊行程</p>
-                    <form class="search-form">
-                        <input type="" class="search-input" value="輸入景點名稱查詢">
-                        <button type="" class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    </form>
-                </div>
-                    <div class="search-item">
-                        <div class="item-contactions">1</div>
-                        <div class="item-contactions">2</div>
-                        <div class="item-contactions">3</div>
-                        <div class="item-contactions">4</div>
-                        <div class="item-contactions">5</div>
-                        <div class="item-contactions">6</div>
-                        <div class="item-contactions">7</div>
-                        <div class="item-contactions">8</div>
-                        <div class="item-contactions">9</div>
-                        <div class="item-contactions">10</div>
-                        <div class="item-contactions">11</div>
-                        <div class="item-contactions">12</div>
-                    </div>
-                </div>
-        </section> -->
+        
 
-        <section class="container-twelve">
-            <div class="container-block">
-                <div class="item">
+        <section class="container-twelve"><!--1-->
+            <div class="container-block"><!--2-->
+                <!-- <div class="item">
                     <div class="img-block apple">
-                        <!-- <img class="img-block" src="../static/img/IMG_3463.jpg">
-                        <p>123456</p> -->
+                        -- <img class="img-block" src="../static/img/IMG_3463.jpg">
+                        <p>123456</p> --
                     </div>
                     <div class="sort"></div>
 
@@ -102,7 +84,7 @@
 
                 <div class="item">
                     <div class="img-block apple"></div>
-                    <!--設定多個屬性讓他去抓-->
+                    --設定多個屬性讓他去抓--
                     <div class="sort"></div>
 
                 </div>
@@ -159,7 +141,7 @@
                     <div class="img-block apple"></div>
                     <div class="sort"></div>
 
-                </div>
+                </div> -->
 
 
 
@@ -184,7 +166,7 @@
     <footer>
         <p>COPYRIGHT © 2021 台北一日遊</p>
     </footer>
-
+    
 
 </body>
 <!-- <div class="more_button">
