--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,7 +268,8 @@ main .container-twelve .container-block .item .img-block {
 }
 main .container-twelve .container-block .item .img-block p {
   width: 100%;
-  height: 40px;
+  display: inline-block;
+  max-height: 10vh;
   position: absolute;
   bottom: 0;
   background: #000000;
