--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -307,7 +307,9 @@ main{
                     }
                     p{
                         width: 100%;
-                        height: 40px;
+                        // height: 20vh;
+                        display: inline-block;  //換行搭配
+                        max-height: 10vh;       //換行搭配
                         position:absolute;
                         bottom: 0;
                         background: #000000;
@@ -315,7 +317,7 @@ main{
                         padding: 10px;
                         color: #FFFFFF;
                         font-weight: 700;
-                        
+                       
                         font-size: 16px;
 
                         @include bigmobile{
