--- a/static/css/index.css
+++ b/static/css/index.css
@@ -365,4 +365,4 @@ footer p {
   50% {
     transform: translateY(-10px);
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=index.css.map */
