--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <!-- <link rel="stylesheet" type="text/css" href="../css/style.css"/>
      -->
     <link rel="stylesheet" href="../static/css/all.css">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/index.css">
+    <!-- <link rel="stylesheet" href="../static/css/index/style.css"> -->
 </head>
 
 <body id="body">
