--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,9 +10,8 @@
 nav {
   width: 100%;
   height: 54px;
-  display: flex;
-  position: absolute;
-  z-index: 2;
+  position: fixed;
+  z-index: 100;
   background-color: white;
 }
 nav div {
@@ -23,17 +22,7 @@ nav div {
 }
 @media (max-width: 1250px) {
   nav div {
-    width: 80%;
-  }
-}
-@media (max-width: 1000px) {
-  nav div {
-    width: 80%;
-  }
-}
-@media (max-width: 600px) {
-  nav div {
-    width: 80%;
+    width: 90%;
   }
 }
 nav div div.nav-bar-left {
@@ -47,10 +36,9 @@ nav div div.nav-bar-left p {
   font-weight: 700;
   color: #448899;
 }
-@media (max-width: 600px) {
+@media (max-width: 410px) {
   nav div div.nav-bar-left p {
-    margin: 10px;
-    font-size: 20px;
+    font-size: 28px;
   }
 }
 nav div div.nav-bar-right {
@@ -69,11 +57,9 @@ nav div div.nav-bar-right p {
   color: #666666;
   font-weight: 500;
 }
-@media (max-width: 600px) {
+@media (max-width: 410px) {
   nav div div.nav-bar-right p {
-    margin-right: 5px;
-    margin-left: 5px;
-    font-size: 12px;
+    margin-right: 10px;
   }
 }
 
@@ -91,15 +77,9 @@ main .page-one .text {
   left: 50%;
   transform: translate(-50%, 0%);
 }
-@media (max-width: 600px) {
-  main .page-one .text {
-    width: 100%;
-    padding: 20px;
-  }
-}
 @media (max-width: 1250px) {
   main .page-one .text {
-    width: 80%;
+    width: 90%;
   }
 }
 main .page-one .text h2 {
@@ -109,11 +89,6 @@ main .page-one .text h2 {
   color: #F8F8F8;
   margin: 30px 0;
 }
-@media (max-width: 600px) {
-  main .page-one .text h2 {
-    font-size: 20px;
-  }
-}
 main .page-one .text p {
   font-weight: 700;
   font-size: 16px;
@@ -121,19 +96,14 @@ main .page-one .text p {
   color: #F8F8F8;
   margin: 30px 0;
 }
-@media (max-width: 600px) {
-  main .page-one .text p {
-    font-size: 12px;
-  }
-}
 main .page-one .text .but {
   width: 460px;
   height: 46px;
   display: flex;
 }
-@media (max-width: 600px) {
+@media (max-width: 550px) {
   main .page-one .text .but {
-    width: 280px;
+    width: 95%;
   }
 }
 main .page-one .text .but .search {
@@ -147,9 +117,9 @@ main .page-one .text .but .search {
   border: none;
   border-radius: 6px 0 0 6px;
 }
-@media (max-width: 600px) {
+@media (max-width: 410px) {
   main .page-one .text .but .search {
-    width: 200px;
+    width: 250px;
   }
 }
 main .page-one .text .but .icon {
@@ -170,6 +140,11 @@ main .page-one .text .searchcontainer {
   width: 400px;
   display: none;
 }
+@media (max-width: 550px) {
+  main .page-one .text .searchcontainer {
+    width: 80%;
+  }
+}
 main .page-one .text .searchcontainer .searchForm {
   width: 100%;
   height: 100%;
@@ -182,11 +157,17 @@ main .page-one .text .searchcontainer .searchForm {
   box-shadow: 0px 0px 20px #AABBCC;
   background-color: #FFFFFF;
 }
-@media (max-width: 600px) {
+@media (max-width: 550px) {
   main .page-one .text .searchcontainer .searchForm {
-    width: 322px;
-    height: 100%;
-    padding-right: 34px;
+    width: 350px;
+  }
+}
+@media (max-width: 410px) {
+  main .page-one .text .searchcontainer .searchForm {
+    width: 310px;
+    padding-right: 0px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 }
 main .page-one .text .searchcontainer .searchForm .searchItem {
@@ -199,10 +180,15 @@ main .page-one .text .searchcontainer .searchForm .searchItem {
   line-height: 20px;
   align-items: center;
 }
-@media (max-width: 600px) {
+@media (max-width: 550px) {
   main .page-one .text .searchcontainer .searchForm .searchItem {
     width: 96px;
-    height: 100%;
+  }
+}
+@media (max-width: 410px) {
+  main .page-one .text .searchcontainer .searchForm .searchItem {
+    width: 80px;
+    padding: 10px 10px;
   }
 }
 main .page-one .text .searchcontainer .searchForm .searchItem:hover {
@@ -210,6 +196,14 @@ main .page-one .text .searchcontainer .searchForm .searchItem:hover {
   height: 100%;
   background-color: rgb(232, 232, 232);
   border-radius: 5px;
+}
+@media (max-width: 550px) {
+  main .page-one .text .searchcontainer .searchForm .searchItem:hover {
+    width: 96px;
+  }
+}
+main .container-twelve {
+  width: 100%;
 }
 main .container-twelve .container-block {
   width: 1200px;
@@ -221,24 +215,21 @@ main .container-twelve .container-block {
 }
 @media (max-width: 1250px) {
   main .container-twelve .container-block {
-    width: 80%;
+    width: 90%;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr); /*高度 1row 2row*/
   }
 }
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   main .container-twelve .container-block {
-    width: 80%;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr); /*高度 1row 2row*/
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 550px) {
   main .container-twelve .container-block {
-    width: 90%;
-    grid-template-columns: repeat(1, 322px);
-    grid-template-rows: repeat(12, 280px); /*高度 1row 2row*/
-    justify-content: center; /* 水平置中 */
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr); /*高度 1row 2row*/
   }
 }
 main .container-twelve .container-block .item {
@@ -260,12 +251,6 @@ main .container-twelve .container-block .item .img-block {
   z-index: -50;
   border-right-color: #448899;
 }
-@media (max-width: 600px) {
-  main .container-twelve .container-block .item .img-block {
-    width: 321px;
-    height: 235px;
-  }
-}
 main .container-twelve .container-block .item .img-block p {
   width: 100%;
   display: inline-block;
@@ -278,16 +263,6 @@ main .container-twelve .container-block .item .img-block p {
   color: #FFFFFF;
   font-weight: 700;
   font-size: 16px;
-}
-@media (max-width: 1250px) {
-  main .container-twelve .container-block .item .img-block p {
-    font-size: 13px;
-  }
-}
-@media (max-width: 600px) {
-  main .container-twelve .container-block .item .img-block p {
-    width: 322px;
-  }
 }
 main .container-twelve .container-block .item .sort {
   width: 100%;
