--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -149,6 +149,9 @@ body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn {
   border-radius: 50%;
   background-color: white;
   opacity: 0.7;
+  display: flex;
+  align-items: center; /* 垂直置中 */
+  justify-content: center;
 }
 @media (max-width: 1000px) {
   body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn {
@@ -157,12 +160,8 @@ body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn {
   }
 }
 body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn i {
-  display: flex;
-  justify-content: center;
   opacity: 0.5;
-  font-size: 1.5rem;
-  align-items: center; /* 垂直置中 */
-  text-align: center;
+  font-size: 20px;
 }
 @media (max-width: 1000px) {
   body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn i {
