--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -170,18 +170,16 @@ body{
                         border-radius: 50%;
                         background-color: white;
                         opacity: 0.7;
+                        display: flex;
+                        align-items: center;/* 垂直置中 */
+                        justify-content: center;
                         @include screen1000(){
                             height: 25px;
                             width: 25px;
                         }
-                        i{
-                            display: flex;
-                            justify-content: center;
-                            // line-height: 20px;
+                        i{                            
                             opacity: 0.5;
-                            font-size: 1.5rem;
-                            align-items: center;/* 垂直置中 */
-                            text-align: center;
+                            font-size: 20px;
                             @include screen1000(){
                                 font-size: 1.2rem;
                             }
