--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="nav-bar-right">
                 <p>預設行程</p>
-                <p>登入/註冊</p>
+                <p><i>登入</i><i>/</i><i>註冊</i></p>
             </div>
         </div>
     </nav>
@@ -30,8 +30,8 @@
             <div class="text">
                 <h2>輕鬆享受台北一日悠閒</h2>
                 <p>探索每個角落，體驗程式的深度旅遊行程</p>
-                <form action="" method="" class="but">
-                    <input type="text" name="" class="search" placeholder="輸入景點名稱查詢" />
+                <form class="but" action="" method="">
+                    <input class="search" type="text" name="" placeholder="輸入景點名稱查詢" />
                     <div type="" class="icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
@@ -50,8 +50,38 @@
                     </div>
                 </div>
                 
+                
             
             </div>
+            <div class="filmBackground">
+                
+            </div>
+            <div class="signinBlock">
+                <div class="signinBackground">
+                    <div class="signinContent">
+                        <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
+                        <input class="signinEmail" type="text" name="" placeholder="輸入電子信箱" />
+                        <input class="signinPassword" type="text" name="" placeholder="輸入密碼" />
+                        <div class="signinConfirm">登入帳戶</div>
+                        <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="registerBlock">
+                <div class="registerBackground">
+                    <div class="registerContent">
+                        <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
+                        <input class="registerName" type="text" name="" placeholder="輸入姓名" />
+                        <input class="registerEmail" type="text" name="" placeholder="輸入電子信箱" />
+                        <input class="registerPassword" type="text" name="" placeholder="輸入密碼" />
+                        <div class="registerConfirm">註冊新帳戶</div>
+                        <div class="registerSingin">已經有帳戶了？點此登入</div>
+                    </div>
+                </div>
+            </div>
+
+
 
         </section>
 
