--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,6 +11,7 @@ nav {
   width: 100%;
   height: 54px;
   position: fixed;
+  top: 0;
   z-index: 100;
   background-color: white;
 }
@@ -66,6 +67,7 @@ nav div div.nav-bar-right p {
 main .page-one {
   width: 100%;
   height: 320px;
+  margin-top: 54px;
   background-image: url(../img/welcome.png);
   background-size: cover;
   -o-object-position: 100% 0;
@@ -202,6 +204,176 @@ main .page-one .text .searchcontainer .searchForm .searchItem:hover {
   main .page-one .text .searchcontainer .searchForm .searchItem:hover {
     width: 96px;
   }
+}
+main .page-one .filmBackground {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 100;
+  position: absolute;
+  opacity: 0.25;
+  display: none;
+}
+main .page-one .signinBlock {
+  width: 100%;
+  height: 275px;
+  margin-top: 26px;
+  position: absolute;
+  z-index: 101;
+  display: none;
+  justify-content: center;
+}
+main .page-one .signinBlock .signinBackground {
+  width: 340px;
+  height: 100%;
+  background-color: #448899;
+  border-radius: 6px;
+}
+main .page-one .signinBlock .signinBackground .signinContent {
+  width: 100%;
+  height: 265px;
+  margin-top: 10px;
+  background-color: #FFFFFF;
+  border-radius: 0 0 6px 6px;
+}
+main .page-one .signinBlock .signinBackground .signinContent .signinTitle {
+  position: relative;
+  top: 15px;
+  width: 100%;
+  height: 27px;
+  display: flex;
+  justify-content: center;
+  color: #666666;
+  font-weight: 1000;
+  font-size: 24px;
+}
+main .page-one .signinBlock .signinBackground .signinContent .signinClose {
+  position: relative;
+  left: 75px;
+}
+main .page-one .signinBlock .signinBackground .signinContent input {
+  width: 310px;
+  height: 47px;
+  left: 15px;
+  border-radius: 5px;
+  padding: 15px;
+  border: 1px Gray solid;
+  font-weight: 600;
+}
+main .page-one .signinBlock .signinBackground .signinContent .signinEmail {
+  position: relative;
+  top: 30px;
+}
+main .page-one .signinBlock .signinBackground .signinContent .signinPassword {
+  position: relative;
+  top: 40px;
+}
+main .page-one .signinBlock .signinBackground .signinContent .signinConfirm {
+  position: relative;
+  top: 50px;
+  left: 15px;
+  width: 310px;
+  height: 47px;
+  background-color: #448899;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 1000px;
+  color: white;
+}
+main .page-one .signinBlock .signinBackground .signinContent .signinCreateAccount {
+  position: relative;
+  top: 60px;
+  color: #666666;
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 1000px;
+}
+main .page-one .registerBlock {
+  width: 100%;
+  height: 332px;
+  margin-top: 26px;
+  background-color: #666666;
+  position: absolute;
+  z-index: 101;
+  display: none;
+  justify-content: center;
+}
+main .page-one .registerBlock .registerBackground {
+  width: 340px;
+  height: 100%;
+  background-color: #448899;
+  border-radius: 6px;
+}
+main .page-one .registerBlock .registerBackground .registerContent {
+  width: 100%;
+  height: 322px;
+  margin-top: 10px;
+  background-color: #FFFFFF;
+  border-radius: 0 0 6px 6px;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerTitle {
+  position: relative;
+  top: 15px;
+  width: 100%;
+  height: 27px;
+  display: flex;
+  justify-content: center;
+  color: #666666;
+  font-weight: 1000;
+  font-size: 24px;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerClose {
+  position: relative;
+  left: 75px;
+}
+main .page-one .registerBlock .registerBackground .registerContent input {
+  width: 310px;
+  height: 47px;
+  left: 15px;
+  border-radius: 5px;
+  padding: 15px;
+  border: 1px Gray solid;
+  font-weight: 600;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerName {
+  position: relative;
+  top: 30px;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerEmail {
+  position: relative;
+  top: 40px;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerPassword {
+  position: relative;
+  top: 50px;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerConfirm {
+  position: relative;
+  top: 60px;
+  left: 15px;
+  width: 310px;
+  height: 47px;
+  background-color: #448899;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 1000px;
+  color: white;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerSingin {
+  position: relative;
+  top: 70px;
+  color: #666666;
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 1000px;
 }
 main .container-twelve {
   width: 100%;
