try use connection pool to solve the problem of databases

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -407,7 +407,7 @@ main{
                         position: relative;
                         top: 50px;
                     }
-                    .registerConfirm{
+                    .registerBtn{
                         position: relative;
                         top: 60px;
                         left:15px;
