--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>台北</title>
-
+    <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="../static/css/all.css">
     <link rel="stylesheet" href="../static/css/index.css">
 
@@ -20,7 +20,8 @@
             </div>
             <div class="nav-bar-right">
                 <p>預設行程</p>
-                <p><i>登入</i><i>/</i><i>註冊</i></p>
+                <p class="SigninRegister">登入/註冊</p>
+                <p class="SignOut">登出</p>
             </div>
         </div>
     </nav>
@@ -53,31 +54,31 @@
                 
             
             </div>
-            <div class="filmBackground">
-                
-            </div>
+            <div class="filmBackground"></div>
             <div class="signinBlock">
                 <div class="signinBackground">
                     <div class="signinContent">
                         <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
                         <input class="signinEmail" type="text" name="" placeholder="輸入電子信箱" />
                         <input class="signinPassword" type="text" name="" placeholder="輸入密碼" />
-                        <div class="signinConfirm">登入帳戶</div>
+                        <div class="signinBtn">登入帳戶</div>
                         <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
+                        <div class="signinMessage">登入成功</div>
                     </div>
                 </div>
             </div>
 
             <div class="registerBlock">
                 <div class="registerBackground">
-                    <form class="registerContent" method="POST" action="/api/user">
+                    <div class="registerContent" method="POST" action="/api/user">
                         <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
                         <input class="registerName" type="text" name="registerName" placeholder="輸入姓名" />
                         <input class="registerEmail" type="text" name="registerEmail" placeholder="輸入電子信箱" />
                         <input class="registerPassword" type="text" name="registerPassword" placeholder="輸入密碼" />
-                        <button class="registerBtn">註冊新帳戶</div>
-                        <div class="registerSingin">已經有帳戶了？點此登入</div>
-                    </form>
+                        <div class="registerBtn">註冊新帳戶</div>             
+                        <div class="registerSignInTo">已經有帳戶了？點此登入</div>
+                        <div class="registerMessage">註冊失敗，點此重新註冊</div>
+                    </div>
                 </div>
             </div>
 
