--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -100,6 +100,12 @@ body{
                         margin-right: 5px;
                     }
                 }
+                .SigninRegister{
+                    display: flex;
+                }
+                .SignOut{
+                    display: none;
+                }
             }
 
         }
@@ -113,6 +119,226 @@ body{
         // display: flex;
         // justify-content: center;
         // align-items: center;/* 垂直置中 */
+
+        .filmBackground{
+            width:100%;
+            height:100%;
+            background-color: black;
+            z-index: 100;
+            // position: absolute;
+            position:fixed;                 //固定在視窗同個位置，捲動時跟著移動
+            top:0;
+            opacity: 0.25;
+            display: none;
+        }
+        .signinBlock{
+            width:100%;
+            height:275px;
+            margin-top: 26px;
+            // background-color: #666666;
+            // opacity: 0.25;
+            position:fixed;
+            // position: absolute;
+            z-index: 101;
+            display: none;
+            // display: flex;
+            justify-content: center;
+            
+            .signinBackground{
+                // position: relative;
+                width:340px;
+                height:100%;
+                background-color: #448899;
+                border-radius:6px;
+                .signinContent{
+                    width: 100%;
+                    // height: 100%;
+                    height:265px;
+                    margin-top: 10px;
+                    background-color: #FFFFFF;
+                    border-radius:0 0 6px 6px;
+                    .signinTitle{
+                        position: relative;
+                        top: 15px;
+                        width: 100%;
+                        height:27px;
+                        // background-color: black;
+                        display: flex;
+                        justify-content: center;
+                        color:#666666;
+                        font-weight: 1000;
+                        font-size: 24px;
+                    }
+
+                    .signinClose{
+                        position: relative;
+                        // background-color: red;
+                        left:75px;
+                    }
+
+                    input{
+                        width:310px;
+                        height:47px;
+                        left:15px;
+                        border-radius:5px;
+                        padding:15px;
+                        border:1px Gray solid;
+                        font-weight:600;
+                        
+                    }
+                    .signinEmail{
+                        position: relative;
+                        top: 30px;
+                    }
+                    .signinPassword{
+                        position: relative;
+                        top: 40px;
+                    }
+                    .signinBtn{
+                        position: relative;
+                        top: 50px;
+                        left:15px;
+                        width:310px;
+                        height:47px;
+                        background-color:#448899;
+                        border-radius:6px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 20px;
+                        font-weight: 1000px;
+                        color:white;
+                    }
+                    .signinCreateAccount{
+                        position: relative;
+                        top: 60px;
+                        // left:15px;
+                        color:#666666;
+                        display: flex;
+                        justify-content: center;
+                        font-size: 16px;
+                        font-weight: 1000px;
+                    }
+                    .signinMessage{
+                        position: relative;
+                        top: 40px;
+                        // display: flex;
+                        display: none;
+                        justify-content: center;
+                        font-size: 16px;
+                        font-weight: 1000px;
+                        color:red;
+                    }
+                }
+            }
+        }
+        .registerBlock{
+            width:100%;
+            height:332px;
+            margin-top: 26px;
+            // background-color: #666666;
+            // position: absolute;
+            position:fixed;
+            z-index: 101;
+            display: none;
+            // display: flex;
+            justify-content: center;
+            
+            .registerBackground{
+                width:340px;
+                height:100%;
+                background-color: #448899;
+                border-radius:6px;
+                .registerContent{
+                    width: 100%;
+                    // height:350px;
+                    height:322px;
+                    margin-top: 10px;
+                    background-color: #FFFFFF;
+                    border-radius:0 0 6px 6px;
+                    .registerTitle{
+                        position: relative;
+                        top: 15px;
+                        width: 100%;
+                        height:27px;
+                        // background-color: black;
+                        display: flex;
+                        justify-content: center;
+                        color:#666666;
+                        font-weight: 1000;
+                        font-size: 24px;
+                    }
+
+                    .registerClose{
+                        position: relative;
+                        // background-color: red;
+                        left:75px;
+                    }
+
+                    input{
+                        width:310px;
+                        height:47px;
+                        left:15px;
+                        border-radius:5px;
+                        padding:15px;
+                        border:1px Gray solid;
+                        font-weight:600;
+                        
+                    }
+                    .registerName{
+                        position: relative;
+                        top: 30px;
+                    }
+
+                    .registerEmail{
+                        position: relative;
+                        top: 40px;
+                    }
+                    .registerPassword{
+                        position: relative;
+                        top: 50px;
+                    }
+                    .registerBtn{
+                        position: relative;
+                        top: 60px;
+                        left:15px;
+                        width:310px;
+                        height:47px;
+                        background-color:#448899;
+                        border-radius:6px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 20px;
+                        font-weight: 1000px;
+                        color:white;
+                        border:0px
+                    }
+                    .registerSignInTo{
+                        position: relative;
+                        top: 70px;
+                        // left:15px;
+                        color:#666666;
+                        display: flex;
+                        justify-content: center;
+                        font-size: 16px;
+                        font-weight: 1000px;
+                    }
+                    .registerMessage{
+                        position: relative;
+                        top: 80px;
+                        display: none;
+                        justify-content: center;
+                        font-size: 16px;
+                        font-weight: 1000px;
+                        color:red;
+                    }
+                }
+            }
+        }
+
+
+
         .sectionPicture{
             margin: 0 auto;
             justify-content: center;
@@ -405,6 +631,19 @@ body{
 
 
         }
+    // .filmBackground{
+    //     width:100%;
+    //     height:100%;
+    //     background-color: black;
+    //     z-index: 100;
+    //     // position: absolute;
+    //     position:fixed;                 //固定在視窗同個位置，捲動時跟著移動
+    //     top:0;
+    //     opacity: 0.25;
+    //     // display: none;
+    // }
+
+
 
     }
     footer{
