--- a/static/css/index.css
+++ b/static/css/index.css
@@ -63,6 +63,12 @@ nav div div.nav-bar-right p {
     margin-right: 10px;
   }
 }
+nav div div.nav-bar-right .SigninRegister {
+  display: flex;
+}
+nav div div.nav-bar-right .SignOut {
+  display: none;
+}
 
 main .page-one {
   width: 100%;
@@ -210,7 +216,8 @@ main .page-one .filmBackground {
   height: 100%;
   background-color: black;
   z-index: 100;
-  position: absolute;
+  position: fixed;
+  top: 0;
   opacity: 0.25;
   display: none;
 }
@@ -218,7 +225,7 @@ main .page-one .signinBlock {
   width: 100%;
   height: 275px;
   margin-top: 26px;
-  position: absolute;
+  position: fixed;
   z-index: 101;
   display: none;
   justify-content: center;
@@ -268,7 +275,7 @@ main .page-one .signinBlock .signinBackground .signinContent .signinPassword {
   position: relative;
   top: 40px;
 }
-main .page-one .signinBlock .signinBackground .signinContent .signinConfirm {
+main .page-one .signinBlock .signinBackground .signinContent .signinBtn {
   position: relative;
   top: 50px;
   left: 15px;
@@ -292,12 +299,20 @@ main .page-one .signinBlock .signinBackground .signinContent .signinCreateAccoun
   font-size: 16px;
   font-weight: 1000px;
 }
+main .page-one .signinBlock .signinBackground .signinContent .signinMessage {
+  position: relative;
+  top: 40px;
+  display: none;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 1000px;
+  color: red;
+}
 main .page-one .registerBlock {
   width: 100%;
   height: 332px;
   margin-top: 26px;
-  background-color: #666666;
-  position: absolute;
+  position: fixed;
   z-index: 101;
   display: none;
   justify-content: center;
@@ -365,8 +380,9 @@ main .page-one .registerBlock .registerBackground .registerContent .registerBtn 
   font-size: 20px;
   font-weight: 1000px;
   color: white;
+  border: 0px;
 }
-main .page-one .registerBlock .registerBackground .registerContent .registerSingin {
+main .page-one .registerBlock .registerBackground .registerContent .registerSignInTo {
   position: relative;
   top: 70px;
   color: #666666;
@@ -374,6 +390,15 @@ main .page-one .registerBlock .registerBackground .registerContent .registerSing
   justify-content: center;
   font-size: 16px;
   font-weight: 1000px;
+}
+main .page-one .registerBlock .registerBackground .registerContent .registerMessage {
+  position: relative;
+  top: 80px;
+  display: none;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 1000px;
+  color: red;
 }
 main .container-twelve {
   width: 100%;
