--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -28,7 +28,7 @@
                 <div class="signinBackground">
                     <div class="signinContent">
                         <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
-                        <input class="signinEmail" type="text" name="" placeholder="輸入電子信箱" />
+                        <input class="signinEmail" type="email" name="" placeholder="輸入電子信箱" />
                         <input class="signinPassword" type="password" name="" placeholder="輸入密碼" />
                         <div class="signinBtn">登入帳戶</div>
                         <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
@@ -41,7 +41,7 @@
                     <div class="registerContent" method="POST" action="/api/user">
                         <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
                         <input class="registerName" type="text" name="registerName" placeholder="輸入姓名" />
-                        <input class="registerEmail" type="text" name="registerEmail" placeholder="輸入電子信箱" />
+                        <input class="registerEmail" type="email" name="registerEmail" placeholder="輸入電子信箱" />
                         <input class="registerPassword" type="password" name="registerPassword" placeholder="輸入密碼" />
                         <div class="registerBtn">註冊新帳戶</div>             
                         <div class="registerSignInTo">已經有帳戶了？點此登入</div>
